Adding navbar badge & hover

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <nav id="navbar">
                 
                 <ul>
-                    <li>About</li>
-                    <li>Work</li>
-                    <li>Services</li>
-                    <li>Jobs</li>
+                    <a href="#"><li>About</li></a>
+                    <a href="#"><li>Work</li></a>
+                    <a href="#"><li>Services</li></a>
+                    <a href="#"><li>Jobs<span id="jobs-badge"> 2 </span></li></a>
                 </ul>
         </nav>
         <div id="intro-ct-button"><button id="intro-contact">Contact Us</button></div>
