Fixing who we are section & adding what we do section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/index-style.css">
     <link rel="stylesheet" href="styles/intro-section.css">
     <link rel="stylesheet" href="styles/whoweare-section.css">
+    <link rel="stylesheet" href="styles/whatwedo-section.css">
     <title>Folio Agency</title>
 </head>
 <body>
@@ -111,9 +112,62 @@
                 <h3>Biggest Branding</h3>
             </div>
 
+            <br><br>
         </div>
-        
-    </div>
+
+        <!--What we do-->
+        <div id="whatwedo-section" class="container">
+            <br><br>
+            <div id="whatwedo-title">
+                <img class="symbol" src="img/logo/logo-symbol-purple.png">
+                <div class="title">
+                    <h3 class="section-number">02. </h3><h3 class="desc">What We Do</h3>
+                </div>
+            </div>
+
+            <div id="whatwedo-text">
+                <h1>We Make Designs that Lead and Inspire.</h1>
+                <div id="arrow">
+                    <i class="fa fa-long-arrow-left" id="left-arrow" aria-hidden="true"></i>
+                    <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                </div>
+            </div>
+
+            <div id="card-group">
+                <div id="card">
+                    <br>
+                    <img src="img/icons/strategy-icon.png">
+                    <h3>Strategy</h3>
+                    <br>
+                </div>
+                <div id="card">
+                    <br>
+                    <img src="img/icons/branding-icon.png">
+                    <h3>Branding</h3>
+                    <br>
+                </div>
+                <div id="card">
+                    <br>
+                    <img src="img/icons/interactive-icon.png">
+                    <h3>Interactive</h3>
+                    <br>
+                </div>
+           
+                <div id="card">
+                    <br>
+                    <img src="img/icons/communicate-icon.png">
+                    <h3>Communicate</h3>
+                    <br>
+                </div>
+
+            </div>
+
+            <br><br><br>
+
+        </div>
+
+
+ 
 
 </body>
 </html>
