Adding achievements section w/ media queries

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/intro-section.css">
     <link rel="stylesheet" href="styles/whoweare-section.css">
     <link rel="stylesheet" href="styles/whatwedo-section.css">
+    <link rel="stylesheet" href="styles/achievement-section.css">
     <title>Folio Agency</title>
 </head>
 <body>
@@ -115,6 +116,7 @@
             <br><br>
         </div>
 
+    </div>
         <!--What we do-->
         <div id="whatwedo-section" class="container">
             <br><br>
@@ -166,8 +168,37 @@
 
         </div>
 
+        <!--Achievements-->
+        <div id="achievements" class="container">
+            <div id="achievements-group">
+                <div id="achievement-title">
+                    <div class="title">
+                        <img class="symbol" src="img/logo/logo-symbol-purple.png">
+                        <h3 class="section-number">03. </h3><h3 class="desc">Achievement</h3>
+                    </div>
 
- 
+                    <div id="achievement-text">
+                        <h2>A design team building a curated marketplace for UI designers.</h2>
+                        <div id="proj-number">
+                            <h1>68</h1>
+                            <p>&#128526; Successful Projects</p>
+                        </div>
+                    </div>
+
+                </div>
+    
+
+    
+                <div id="achievements-illustration"><img src="img/illustration/1-Phone-Cut.png"></div>
+            </div>
+
+            <div id="radio-options">
+                <input id="option" type="radio">
+                <input type="radio">
+                <input type="radio">
+            </div>
+        </div>
+
 
 </body>
 </html>
