Updating famous projects section

--- a/index.html
+++ b/index.html
@@ -218,6 +218,29 @@
                         <button class="primary-button">Contact Us</button>                    </div>
                     <p>Agency is a full-service agency, busy designing and building beautiful digital products, brands, and experiences.</p>
                 </div>
+
+                <div id="famousproj-cardsct">
+                    <div id="famousproj-cardflex">
+                        <div id="famousproj-cardtxt">
+                            <button class="primary-button">Featured Product</button>         
+                            <h1>Sapiens: The Free Character Builder App.</h1>
+                            <p>
+                                Beautiful library of modular, component-based character illustrations free to use for all your personal or client projects.
+                            </p>
+                        </div>
+                        <div id="famousproj-viewbutton">
+                            <h2>view</h2>
+                        </div>
+                        <div id="famousproj-arrowbutton">
+                            <i class="fa fa-long-arrow-right" aria-hidden="true"></i>
+                        </div>
+                        <div id="famousproj-cardimg">
+                            <img src="img/cards/Char-Running.png">
+                        </div>
+                        
+                    </div>
+                </div>
+
             </div>
 
             <!--Famous projects end-->
